# TinyPlane

./: .gitignore
.github/workflows/: esp-idf-ci.yml
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  flight_control.c  flight_control.h  hardware.c  hardware.h  main.c  mpu6050.c  mpu6050.h  protocol.c  protocol.h  udp_server.c  udp_server.h  wifi_ap.c  wifi_ap.h
firmware/test/: CMakeLists.txt  hardware_mock.c  test_flight_control.c  test_main.c  test_protocol.c
